# serializer version: 1
# name: TestSpecificSamples.test_270_eligibility_inquiry
  dict({
    'control_number': '000000001',
    'groups': list([
      dict({
        'control_number': '1',
        'functional_id': 'HS',
        'transactions': list([
          dict({
            'content': list([
              dict({
                'elements': list([
                  '0022',
                  '13',
                  '10001234',
                  '20210101',
                  '1230',
                ]),
                'tag': 'BHT',
                'type': 'segment',
              }),
              dict({
                'children': list([
                  dict({
                    'children': list([
                      dict({
                        'children': list([
                        ]),
                        'iteration': 1,
                        'loop_id': 'HL_22',
                        'segments': list([
                          dict({
                            'elements': list([
                              '3',
                              '2',
                              '22',
                              '0',
                            ]),
                            'tag': 'HL',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '1',
                              '93175-0001',
                              '9877281234',
                            ]),
                            'tag': 'TRN',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'IL',
                              '1',
                              'DOE',
                              'JOHN',
                              '',
                              '',
                              '',
                              'MI',
                              'MBI123456789',
                            ]),
                            'tag': 'NM1',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'D8',
                              '19550512',
                            ]),
                            'tag': 'DMG',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '291',
                              'D8',
                              '20210101',
                            ]),
                            'tag': 'DTP',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '30',
                            ]),
                            'tag': 'EQ',
                            'type': 'segment',
                          }),
                        ]),
                        'type': 'loop',
                      }),
                      dict({
                        'children': list([
                          dict({
                            'children': list([
                            ]),
                            'iteration': 1,
                            'loop_id': 'HL_23',
                            'segments': list([
                              dict({
                                'elements': list([
                                  '5',
                                  '4',
                                  '23',
                                  '0',
                                ]),
                                'tag': 'HL',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  '03',
                                  '1',
                                  'SMITH',
                                  'BABY',
                                  '',
                                  '',
                                  '',
                                  'MI',
                                  'MBI987654321',
                                ]),
                                'tag': 'NM1',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  'D8',
                                  '20200101',
                                  'M',
                                ]),
                                'tag': 'DMG',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  '291',
                                  'D8',
                                  '20210101',
                                ]),
                                'tag': 'DTP',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  '1',
                                ]),
                                'tag': 'EQ',
                                'type': 'segment',
                              }),
                            ]),
                            'type': 'loop',
                          }),
                        ]),
                        'iteration': 1,
                        'loop_id': 'HL_22',
                        'segments': list([
                          dict({
                            'elements': list([
                              '4',
                              '2',
                              '22',
                              '1',
                            ]),
                            'tag': 'HL',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '1',
                              '93175-0002',
                              '9877281234',
                            ]),
                            'tag': 'TRN',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'IL',
                              '1',
                              'SMITH',
                              'JANE',
                              '',
                              '',
                              '',
                              'MI',
                              'MBI987654321',
                            ]),
                            'tag': 'NM1',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'D8',
                              '19800820',
                            ]),
                            'tag': 'DMG',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '291',
                              'D8',
                              '20210101',
                            ]),
                            'tag': 'DTP',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '33',
                            ]),
                            'tag': 'EQ',
                            'type': 'segment',
                          }),
                        ]),
                        'type': 'loop',
                      }),
                    ]),
                    'iteration': 1,
                    'loop_id': 'HL_21',
                    'segments': list([
                      dict({
                        'elements': list([
                          '2',
                          '1',
                          '21',
                          '1',
                        ]),
                        'tag': 'HL',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '1P',
                          '2',
                          'GENERAL HOSPITAL',
                          '',
                          '',
                          '',
                          '',
                          'XX',
                          '1234567890',
                        ]),
                        'tag': 'NM1',
                        'type': 'segment',
                      }),
                    ]),
                    'type': 'loop',
                  }),
                ]),
                'iteration': 1,
                'loop_id': 'HL_20',
                'segments': list([
                  dict({
                    'elements': list([
                      '1',
                      '',
                      '20',
                      '1',
                    ]),
                    'tag': 'HL',
                    'type': 'segment',
                  }),
                  dict({
                    'elements': list([
                      'PR',
                      '2',
                      'CMS MEDICARE',
                      '',
                      '',
                      '',
                      '',
                      'PI',
                      'CMS001',
                    ]),
                    'tag': 'NM1',
                    'type': 'segment',
                  }),
                ]),
                'type': 'loop',
              }),
            ]),
            'control_number': '0001',
            'segment_count': 24,
            'transaction_id': '270',
          }),
        ]),
        'version': '005010X279A1',
      }),
    ]),
    'receiver_id': 'CMS',
    'sender_id': 'SUBMITTERID',
    'version': '00501',
  })
# ---
# name: TestSpecificSamples.test_835_remittance
  dict({
    'control_number': '000000001',
    'groups': list([
      dict({
        'control_number': '1',
        'functional_id': 'HP',
        'transactions': list([
          dict({
            'content': list([
              dict({
                'elements': list([
                  'I',
                  '2250.00',
                  'C',
                  'CHK',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '',
                  '20210115',
                ]),
                'tag': 'BPR',
                'type': 'segment',
              }),
              dict({
                'elements': list([
                  '1',
                  'CHK889977',
                  '1999999999',
                ]),
                'tag': 'TRN',
                'type': 'segment',
              }),
              dict({
                'elements': list([
                  '405',
                  '20210115',
                ]),
                'tag': 'DTM',
                'type': 'segment',
              }),
              dict({
                'children': list([
                ]),
                'iteration': 1,
                'loop_id': '1000',
                'segments': list([
                  dict({
                    'elements': list([
                      'PR',
                      'UNITED HEALTHCARE',
                      'XV',
                      '87726',
                    ]),
                    'tag': 'N1',
                    'type': 'segment',
                  }),
                ]),
                'type': 'loop',
              }),
              dict({
                'children': list([
                ]),
                'iteration': 2,
                'loop_id': '1000',
                'segments': list([
                  dict({
                    'elements': list([
                      'PE',
                      'MEDICAL GROUP LLC',
                      'XX',
                      '1234567890',
                    ]),
                    'tag': 'N1',
                    'type': 'segment',
                  }),
                ]),
                'type': 'loop',
              }),
              dict({
                'children': list([
                  dict({
                    'children': list([
                      dict({
                        'children': list([
                        ]),
                        'iteration': 1,
                        'loop_id': '2110',
                        'segments': list([
                          dict({
                            'elements': list([
                              'HC',
                              '150.00',
                              '120.00',
                            ]),
                            'tag': 'SVC',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '472',
                              '20210101',
                            ]),
                            'tag': 'DTM',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'PR',
                              '2',
                              '30.00',
                            ]),
                            'tag': 'CAS',
                            'type': 'segment',
                          }),
                        ]),
                        'type': 'loop',
                      }),
                    ]),
                    'iteration': 1,
                    'loop_id': '2100',
                    'segments': list([
                      dict({
                        'elements': list([
                          'CLM2024001',
                          '1',
                          '150.00',
                          '120.00',
                          '30.00',
                          'MB',
                          '9988776655',
                        ]),
                        'tag': 'CLP',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'QC',
                          '1',
                          'DOE',
                          'JOHN',
                          '',
                          '',
                          '',
                          'MI',
                          'MBI123456789',
                        ]),
                        'tag': 'NM1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '232',
                          '20210101',
                        ]),
                        'tag': 'DTM',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '233',
                          '20210101',
                        ]),
                        'tag': 'DTM',
                        'type': 'segment',
                      }),
                    ]),
                    'type': 'loop',
                  }),
                  dict({
                    'children': list([
                      dict({
                        'children': list([
                          dict({
                            'children': list([
                            ]),
                            'iteration': 2,
                            'loop_id': '2110',
                            'segments': list([
                              dict({
                                'elements': list([
                                  'HC',
                                  '500.00',
                                  '0.00',
                                ]),
                                'tag': 'SVC',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  '472',
                                  '20210102',
                                ]),
                                'tag': 'DTM',
                                'type': 'segment',
                              }),
                            ]),
                            'type': 'loop',
                          }),
                        ]),
                        'iteration': 2,
                        'loop_id': '2100',
                        'segments': list([
                          dict({
                            'elements': list([
                              'CLM2024002',
                              '3',
                              '500.00',
                              '0.00',
                              '500.00',
                              'MB',
                              '9988776656',
                            ]),
                            'tag': 'CLP',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'QC',
                              '1',
                              'SMITH',
                              'JANE',
                              '',
                              '',
                              '',
                              'MI',
                              'MBI987654321',
                            ]),
                            'tag': 'NM1',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '232',
                              '20210102',
                            ]),
                            'tag': 'DTM',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              '233',
                              '20210102',
                            ]),
                            'tag': 'DTM',
                            'type': 'segment',
                          }),
                          dict({
                            'elements': list([
                              'CO',
                              '50',
                              '500.00',
                            ]),
                            'tag': 'CAS',
                            'type': 'segment',
                          }),
                        ]),
                        'type': 'loop',
                      }),
                      dict({
                        'children': list([
                          dict({
                            'children': list([
                              dict({
                                'children': list([
                                ]),
                                'iteration': 3,
                                'loop_id': '2110',
                                'segments': list([
                                  dict({
                                    'elements': list([
                                      'HC',
                                      '2500.00',
                                      '2130.00',
                                    ]),
                                    'tag': 'SVC',
                                    'type': 'segment',
                                  }),
                                  dict({
                                    'elements': list([
                                      '472',
                                      '20210103',
                                    ]),
                                    'tag': 'DTM',
                                    'type': 'segment',
                                  }),
                                  dict({
                                    'elements': list([
                                      'CO',
                                      '45',
                                      '200.00',
                                    ]),
                                    'tag': 'CAS',
                                    'type': 'segment',
                                  }),
                                  dict({
                                    'elements': list([
                                      'PR',
                                      '1',
                                      '170.00',
                                    ]),
                                    'tag': 'CAS',
                                    'type': 'segment',
                                  }),
                                ]),
                                'type': 'loop',
                              }),
                            ]),
                            'iteration': 3,
                            'loop_id': '2100',
                            'segments': list([
                              dict({
                                'elements': list([
                                  'CLM2024003',
                                  '1',
                                  '2500.00',
                                  '2130.00',
                                  '370.00',
                                  'MB',
                                  '9988776657',
                                ]),
                                'tag': 'CLP',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  'QC',
                                  '1',
                                  'JOHNSON',
                                  'BOB',
                                  '',
                                  '',
                                  '',
                                  'MI',
                                  'MBI555444333',
                                ]),
                                'tag': 'NM1',
                                'type': 'segment',
                              }),
                              dict({
                                'elements': list([
                                  '232',
                                  '20210103',
                                ]),
                                'tag': 'DTM',
                                'type': 'segment',
                              }),
                            ]),
                            'type': 'loop',
                          }),
                        ]),
                        'iteration': 3,
                        'loop_id': '2000',
                        'segments': list([
                          dict({
                            'elements': list([
                              '3',
                            ]),
                            'tag': 'LX',
                            'type': 'segment',
                          }),
                        ]),
                        'type': 'loop',
                      }),
                    ]),
                    'iteration': 2,
                    'loop_id': '2000',
                    'segments': list([
                      dict({
                        'elements': list([
                          '2',
                        ]),
                        'tag': 'LX',
                        'type': 'segment',
                      }),
                    ]),
                    'type': 'loop',
                  }),
                ]),
                'iteration': 1,
                'loop_id': '2000',
                'segments': list([
                  dict({
                    'elements': list([
                      '1',
                    ]),
                    'tag': 'LX',
                    'type': 'segment',
                  }),
                ]),
                'type': 'loop',
              }),
            ]),
            'control_number': '0001',
            'segment_count': 31,
            'transaction_id': '835',
          }),
        ]),
        'version': '005010X221A1',
      }),
    ]),
    'receiver_id': 'PROVIDER',
    'sender_id': 'PAYER',
    'version': '00501',
  })
# ---
# name: TestSpecificSamples.test_837p_professional_claim
  dict({
    'control_number': '000000001',
    'groups': list([
      dict({
        'control_number': '1',
        'functional_id': 'HC',
        'transactions': list([
          dict({
            'content': list([
              dict({
                'elements': list([
                  '0019',
                  '00',
                  '000000001',
                  '20210101',
                  '1200',
                  'CH',
                ]),
                'tag': 'BHT',
                'type': 'segment',
              }),
              dict({
                'elements': list([
                  '41',
                  '2',
                  'SUBMITTER NAME',
                  '',
                  '',
                  '',
                  '',
                  '46',
                  'SUBMITTERID',
                ]),
                'tag': 'NM1',
                'type': 'segment',
              }),
              dict({
                'elements': list([
                  'IC',
                  'CONTACT NAME',
                  'TE',
                  '8005551234',
                ]),
                'tag': 'PER',
                'type': 'segment',
              }),
              dict({
                'elements': list([
                  '40',
                  '2',
                  'UNITED HEALTHCARE',
                  '',
                  '',
                  '',
                  '',
                  '46',
                  '87726',
                ]),
                'tag': 'NM1',
                'type': 'segment',
              }),
              dict({
                'children': list([
                  dict({
                    'children': list([
                    ]),
                    'iteration': 1,
                    'loop_id': 'HL_22',
                    'segments': list([
                      dict({
                        'elements': list([
                          '2',
                          '1',
                          '22',
                          '0',
                        ]),
                        'tag': 'HL',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'P',
                          '18',
                          '',
                          '',
                          '',
                          '',
                          '',
                          '',
                          'CI',
                        ]),
                        'tag': 'SBR',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'IL',
                          '1',
                          'DOE',
                          'JOHN',
                          '',
                          '',
                          '',
                          'MI',
                          'MBI123456789',
                        ]),
                        'tag': 'NM1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'D8',
                          '19800101',
                          'M',
                        ]),
                        'tag': 'DMG',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'PR',
                          '2',
                          'UNITED HEALTHCARE',
                          '',
                          '',
                          '',
                          '',
                          'PI',
                          '87726',
                        ]),
                        'tag': 'NM1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'CLM2024001',
                          '150.00',
                          '',
                          '',
                          '11',
                          'Y',
                          'A',
                          'Y',
                          'Y',
                        ]),
                        'tag': 'CLM',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'ABK',
                        ]),
                        'tag': 'HI',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '1',
                        ]),
                        'tag': 'LX',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'HC',
                          '150.00',
                          'UN',
                          '1',
                          '',
                          '',
                          '1',
                        ]),
                        'tag': 'SV1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '472',
                          'D8',
                          '20210101',
                        ]),
                        'tag': 'DTP',
                        'type': 'segment',
                      }),
                    ]),
                    'type': 'loop',
                  }),
                  dict({
                    'children': list([
                    ]),
                    'iteration': 1,
                    'loop_id': 'HL_22',
                    'segments': list([
                      dict({
                        'elements': list([
                          '3',
                          '1',
                          '22',
                          '0',
                        ]),
                        'tag': 'HL',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'P',
                          '18',
                          '',
                          '',
                          '',
                          '',
                          '',
                          '',
                          'CI',
                        ]),
                        'tag': 'SBR',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'IL',
                          '1',
                          'SMITH',
                          'JANE',
                          '',
                          '',
                          '',
                          'MI',
                          'MBI987654321',
                        ]),
                        'tag': 'NM1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'D8',
                          '19850615',
                          'F',
                        ]),
                        'tag': 'DMG',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'PR',
                          '2',
                          'UNITED HEALTHCARE',
                          '',
                          '',
                          '',
                          '',
                          'PI',
                          '87726',
                        ]),
                        'tag': 'NM1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'CLM2024002',
                          '250.00',
                          '',
                          '',
                          '11',
                          'Y',
                          'A',
                          'Y',
                          'Y',
                        ]),
                        'tag': 'CLM',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'ABK',
                        ]),
                        'tag': 'HI',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '1',
                        ]),
                        'tag': 'LX',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'HC',
                          '100.00',
                          'UN',
                          '2',
                          '',
                          '',
                          '1',
                        ]),
                        'tag': 'SV1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '472',
                          'D8',
                          '20210102',
                        ]),
                        'tag': 'DTP',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '2',
                        ]),
                        'tag': 'LX',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          'HC',
                          '150.00',
                          'UN',
                          '1',
                          '',
                          '',
                          '1',
                        ]),
                        'tag': 'SV1',
                        'type': 'segment',
                      }),
                      dict({
                        'elements': list([
                          '472',
                          'D8',
                          '20210102',
                        ]),
                        'tag': 'DTP',
                        'type': 'segment',
                      }),
                    ]),
                    'type': 'loop',
                  }),
                ]),
                'iteration': 1,
                'loop_id': 'HL_20',
                'segments': list([
                  dict({
                    'elements': list([
                      '1',
                      '',
                      '20',
                      '1',
                    ]),
                    'tag': 'HL',
                    'type': 'segment',
                  }),
                  dict({
                    'elements': list([
                      '85',
                      '2',
                      'MEDICAL GROUP LLC',
                      '',
                      '',
                      '',
                      '',
                      'XX',
                      '1234567890',
                    ]),
                    'tag': 'NM1',
                    'type': 'segment',
                  }),
                  dict({
                    'elements': list([
                      '123 HEALTH WAY',
                    ]),
                    'tag': 'N3',
                    'type': 'segment',
                  }),
                  dict({
                    'elements': list([
                      'AUSTIN',
                      'TX',
                      '78701',
                    ]),
                    'tag': 'N4',
                    'type': 'segment',
                  }),
                  dict({
                    'elements': list([
                      'EI',
                      '741234567',
                    ]),
                    'tag': 'REF',
                    'type': 'segment',
                  }),
                ]),
                'type': 'loop',
              }),
            ]),
            'control_number': '0001',
            'segment_count': 34,
            'transaction_id': '837',
          }),
        ]),
        'version': '005010X222A1',
      }),
    ]),
    'receiver_id': 'RECEIVER',
    'sender_id': 'SUBMITTER',
    'version': '00501',
  })
# ---
# name: TestSpecificSamples.test_850_purchase_order
  list([
    dict({
      'elements': list([
        '00',
        'DS',
        '5907867',
        '',
        '20161206',
      ]),
      'tag': 'BEG',
      'type': 'segment',
    }),
    dict({
      'elements': list([
        'SN',
        'USD',
      ]),
      'tag': 'CUR',
      'type': 'segment',
    }),
    dict({
      'elements': list([
        '8M',
        'COMPANYB',
        'ORIGIN',
      ]),
      'tag': 'REF',
      'type': 'segment',
    }),
    dict({
      'elements': list([
        'OC',
        'Donna Person',
        'TE',
        '4255552515 ',
        'FX',
        '4255553875',
      ]),
      'tag': 'PER',
      'type': 'segment',
    }),
    dict({
      'elements': list([
        'PP',
        'ZZ',
        'UPS Ground #442E1W',
      ]),
      'tag': 'FOB',
      'type': 'segment',
    }),
    dict({
      'elements': list([
        '010',
        '20161206',
      ]),
      'tag': 'DTM',
      'type': 'segment',
    }),
    dict({
      'elements': list([
        '',
        '2',
        'UPSN',
        '',
        'UPS Ground #442E2E',
        '',
        '',
        '',
        '',
        '',
        '',
        'SG',
      ]),
      'tag': 'TD5',
      'type': 'segment',
    }),
    dict({
      'children': list([
      ]),
      'iteration': 1,
      'loop_id': 'N9',
      'segments': list([
        dict({
          'elements': list([
            'LI',
            'TEXT',
          ]),
          'tag': 'N9',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            'If items are available for partial shipment, please contact companyA@trading.com for authorization prior to release',
          ]),
          'tag': 'MSG',
          'type': 'segment',
        }),
      ]),
      'type': 'loop',
    }),
    dict({
      'children': list([
      ]),
      'iteration': 1,
      'loop_id': 'N1',
      'segments': list([
        dict({
          'elements': list([
            'ST',
            'Company Attn 41309514',
            '92',
            '0857673380000',
          ]),
          'tag': 'N1',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            '1000 BABELWAY PL',
          ]),
          'tag': 'N3',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            'CHICAGO',
            'IL',
            '60639-1030',
            'US',
          ]),
          'tag': 'N4',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            'ST',
            'Sender',
            'TE',
            '7735555120',
          ]),
          'tag': 'PER',
          'type': 'segment',
        }),
      ]),
      'type': 'loop',
    }),
    dict({
      'children': list([
      ]),
      'iteration': 2,
      'loop_id': 'N1',
      'segments': list([
        dict({
          'elements': list([
            'BT',
            'CompanyA',
            '92',
            '0857673380000',
          ]),
          'tag': 'N1',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            '1000 BABELWAY PL',
          ]),
          'tag': 'N3',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            'City',
            'UT',
            '98034',
            'US',
          ]),
          'tag': 'N4',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            'IC',
            'Donna Person',
            'TE',
            '4255552515',
          ]),
          'tag': 'PER',
          'type': 'segment',
        }),
      ]),
      'type': 'loop',
    }),
    dict({
      'children': list([
      ]),
      'iteration': 1,
      'loop_id': 'PO1',
      'segments': list([
        dict({
          'elements': list([
            '1',
            '1',
            'EA',
            '8.90',
            '',
            'VP',
            '32230538',
          ]),
          'tag': 'PO1',
          'type': 'segment',
        }),
      ]),
      'type': 'loop',
    }),
    dict({
      'children': list([
      ]),
      'iteration': 1,
      'loop_id': 'CTT',
      'segments': list([
        dict({
          'elements': list([
            '1',
            '1',
          ]),
          'tag': 'CTT',
          'type': 'segment',
        }),
        dict({
          'elements': list([
            'TT',
            '8.90',
          ]),
          'tag': 'AMT',
          'type': 'segment',
        }),
      ]),
      'type': 'loop',
    }),
  ])
# ---
